# full-stack-fastapi-nextjs-llm-template

./: .actrc  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml  template-test.yml
CHANGELOG/: index.html
ai-agent/: index.html
architecture/: index.html
concepts/: index.html
deployment/: index.html
development/: index.html
docs/: CHANGELOG.md  ai-agent.md  rag.md
fastapi_gen/: cli.py  config.py  prompts.py
frontend/: index.html
getting-help/: index.html
guides/: index.html
guides/configuration/: index.html
guides/quick-start/: index.html
includes/abbreviations/: index.html
installation/: index.html
observability/: index.html
overrides/: main.html
rag/: index.html
search/: search_index.json
template/: VARIABLES.md  cookiecutter.json
template/hooks/: post_gen_project.py
template/{{cookiecutter.project_slug}}/: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
template/{{cookiecutter.project_slug}}/backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
template/{{cookiecutter.project_slug}}/backend/alembic/: env.py
template/{{cookiecutter.project_slug}}/backend/app/: admin.py  main.py
template/{{cookiecutter.project_slug}}/backend/app/agents/: __init__.py  assistant.py  crewai_assistant.py  deepagents_assistant.py  langchain_assistant.py  langgraph_assistant.py  prompts.py
template/{{cookiecutter.project_slug}}/backend/app/agents/tools/: __init__.py  rag_tool.py
template/{{cookiecutter.project_slug}}/backend/app/api/: deps.py
template/{{cookiecutter.project_slug}}/backend/app/api/routes/v1/: __init__.py  admin_ratings.py  agent.py  conversations.py  files.py  health.py  items.py  rag.py  slack_webhook.py  telegram_webhook.py  users.py  webhooks.py
template/{{cookiecutter.project_slug}}/backend/app/channels/: slack.py  telegram.py
template/{{cookiecutter.project_slug}}/backend/app/commands/: cleanup.py  rag.py  seed.py
template/{{cookiecutter.project_slug}}/backend/app/core/: config.py  sanitize.py
template/{{cookiecutter.project_slug}}/backend/app/db/: session.py
template/{{cookiecutter.project_slug}}/backend/app/db/models/: __init__.py  message_rating.py
template/{{cookiecutter.project_slug}}/backend/app/rag/: config.py  documents.py  embeddings.py  image_describer.py  ingestion.py  models.py  reranker.py  retrieval.py  vectorstore.py
template/{{cookiecutter.project_slug}}/backend/app/rag/sources/: base.py
template/{{cookiecutter.project_slug}}/backend/app/repositories/: __init__.py  conversation.py  message_rating.py  sync_source.py
template/{{cookiecutter.project_slug}}/backend/app/schemas/: __init__.py  conversation.py  file.py  message_rating.py  rag.py  user.py
template/{{cookiecutter.project_slug}}/backend/app/services/: __init__.py  conversation.py  conversation_share.py  file_upload.py  message_rating.py  rag_document.py  rag_sync.py  sync_source.py
template/{{cookiecutter.project_slug}}/backend/app/tasks/: __init__.py  channel.py  rag.py
template/{{cookiecutter.project_slug}}/backend/app/worker/: arq_app.py  celery_app.py
template/{{cookiecutter.project_slug}}/backend/app/worker/tasks/: rag_ingestion.py  rag_tasks.py  schedules.py
template/{{cookiecutter.project_slug}}/backend/cli/: commands.py
template/{{cookiecutter.project_slug}}/backend/tests/: conftest.py  test_admin.py  test_core.py  test_repositories.py  test_services.py  test_ssrf.py  test_worker.py
template/{{cookiecutter.project_slug}}/backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_items.py  test_users.py
template/{{cookiecutter.project_slug}}/docs/: configuration.md
template/{{cookiecutter.project_slug}}/docs/howto/: add-agent-tool.md  add-api-endpoint.md  add-data-pipeline.md  add-rag-source.md  customize-agent-prompt.md
template/{{cookiecutter.project_slug}}/frontend/: eslint.config.mjs  package.json
template/{{cookiecutter.project_slug}}/frontend/messages/: en.json  pl.json
template/{{cookiecutter.project_slug}}/frontend/src/app/: providers.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/(dashboard)/admin/conversations/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/(dashboard)/dashboard/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/(dashboard)/profile/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/(dashboard)/rag/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/(dashboard)/settings/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/[locale]/shared/[token]/: page.tsx
template/{{cookiecutter.project_slug}}/frontend/src/app/api/auth/token/: route.ts
template/{{cookiecutter.project_slug}}/frontend/src/components/auth/: login-form.tsx  register-form.tsx
template/{{cookiecutter.project_slug}}/frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  conversation-sidebar.tsx  index.ts  message-item.tsx  rating-buttons.tsx  share-dialog.tsx  tool-call-card.tsx
template/{{cookiecutter.project_slug}}/frontend/src/components/layout/: sidebar.tsx
template/{{cookiecutter.project_slug}}/frontend/src/hooks/: use-auth.ts  use-chat.ts  use-conversations.ts
template/{{cookiecutter.project_slug}}/frontend/src/lib/: constants.ts  rag-api.ts  server-api.ts
template/{{cookiecutter.project_slug}}/frontend/src/stores/: conversation-store.ts
template/{{cookiecutter.project_slug}}/frontend/src/types/: chat.ts  conversation.ts
test_20/backend/alembic/: script.py.mako
test_20/backend/alembic/versions/: 2026-03-18_initial.py
test_20/backend/app/: main.py
tests/: test_cli.py  test_config.py  test_integration.py  test_message_ratings.py  test_prompts.py  test_rag_config.py  test_rag_integration.py  test_template_integration.py
(+9 files in other folders)
