[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
requires-python = ">={{ cookiecutter.python_version }}"
license = { text = "MIT" }
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
{%- if cookiecutter.enable_orjson %}
    "orjson>=3.10.0",
{%- endif %}
{%- if cookiecutter.enable_logfire %}
{%- set logfire_extras = ['fastapi'] %}
{%- if cookiecutter.use_postgresql and cookiecutter.logfire_database %}
{%- set _ = logfire_extras.append('asyncpg') %}
{%- endif %}
{%- if cookiecutter.enable_redis and cookiecutter.logfire_redis %}
{%- set _ = logfire_extras.append('redis') %}
{%- endif %}
{%- if cookiecutter.use_celery and cookiecutter.logfire_celery %}
{%- set _ = logfire_extras.append('celery') %}
{%- endif %}
{%- if cookiecutter.logfire_httpx %}
{%- set _ = logfire_extras.append('httpx') %}
{%- endif %}
    "logfire[{{ logfire_extras | join(',') }}]>=2.0.0",
{%- endif %}
{%- if cookiecutter.use_postgresql %}
{%- if cookiecutter.use_sqlmodel %}
    "sqlmodel>=0.0.22",
{%- else %}
    "sqlalchemy[asyncio]>=2.0.0",
{%- endif %}
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
{%- endif %}
{%- if cookiecutter.use_mongodb %}
    "motor>=3.6.0",
    "beanie>=1.27.0",
{%- endif %}
{%- if cookiecutter.use_sqlite %}
{%- if cookiecutter.use_sqlmodel %}
    "sqlmodel>=0.0.22",
{%- else %}
    "sqlalchemy>=2.0.0",
{%- endif %}
    "alembic>=1.14.0",
{%- endif %}
{%- if cookiecutter.use_jwt %}
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
{%- endif %}
{%- if cookiecutter.enable_oauth %}
    "authlib>=1.3.0",
    "httpx>=0.27.0",
{%- endif %}
{%- if cookiecutter.enable_redis %}
    "redis>=5.2.0",
{%- endif %}
{%- if cookiecutter.enable_caching %}
    "fastapi-cache2>=0.2.2",
{%- endif %}
{%- if cookiecutter.enable_rate_limiting %}
    "slowapi>=0.1.9",
{%- endif %}
{%- if cookiecutter.enable_pagination %}
    "fastapi-pagination>=0.12.31",
{%- endif %}
{%- if cookiecutter.enable_sentry %}
    "sentry-sdk[fastapi]>=2.18.0",
{%- endif %}
{%- if cookiecutter.enable_prometheus %}
    "prometheus-fastapi-instrumentator>=7.0.0",
{%- endif %}
{%- if cookiecutter.enable_admin_panel %}
    "sqladmin>=0.19.0",
{%- if cookiecutter.admin_require_auth %}
    "itsdangerous>=2.2.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.use_celery %}
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
{%- endif %}
{%- if cookiecutter.use_taskiq %}
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "taskiq-dependencies>=0.1.0",
{%- endif %}
{%- if cookiecutter.use_arq %}
    "arq>=0.26.0",
{%- endif %}
{%- if cookiecutter.enable_file_storage %}
    "boto3>=1.35.0",
{%- endif %}
{%- if cookiecutter.enable_ai_agent and cookiecutter.use_pydantic_ai %}
{%- if cookiecutter.use_openai %}
    "pydantic-ai>=0.0.39",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "pydantic-ai-slim[anthropic]>=0.0.39",
{%- endif %}
{%- if cookiecutter.use_openrouter %}
    "pydantic-ai-slim[openrouter]>=0.0.39",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_ai_agent and cookiecutter.use_langchain %}
    "langchain>=0.3.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
    "langgraph>=0.2.0",
{%- endif %}
{%- if cookiecutter.enable_ai_agent and cookiecutter.use_langgraph %}
    "langchain-core>=0.3.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
{%- endif %}
{%- if cookiecutter.enable_ai_agent and cookiecutter.use_crewai %}
    "crewai>=1.0.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_ai_agent and cookiecutter.use_deepagents %}
    "deepagents>=0.1.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.logfire_httpx or cookiecutter.enable_file_storage %}
    "httpx>=0.27.0",
{%- endif %}
    "click>=8.1.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
{%- if cookiecutter.enable_precommit %}
    "pre-commit>=4.0.0",
{%- endif %}
]

[project.scripts]
{{ cookiecutter.project_slug }} = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.{{ cookiecutter.generator_name }}]
generator_version = "{{ cookiecutter.generator_version }}"
generated_at = "{{ cookiecutter.generated_at }}"
