[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
requires-python = ">={{ cookiecutter.python_version }}"
license = { text = "MIT" }
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]

dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
{%- if cookiecutter.enable_orjson %}
    "orjson>=3.10.0",
{%- endif %}
{%- if cookiecutter.enable_logfire %}
{%- set logfire_extras = ['fastapi'] %}
{%- if cookiecutter.use_postgresql and cookiecutter.logfire_database %}
{%- set _ = logfire_extras.append('asyncpg') %}
{%- endif %}
{%- if cookiecutter.enable_redis and cookiecutter.logfire_redis %}
{%- set _ = logfire_extras.append('redis') %}
{%- endif %}
{%- if cookiecutter.use_celery and cookiecutter.logfire_celery %}
{%- set _ = logfire_extras.append('celery') %}
{%- endif %}
{%- if cookiecutter.logfire_httpx %}
{%- set _ = logfire_extras.append('httpx') %}
{%- endif %}
    "logfire[{{ logfire_extras | join(',') }}]>=2.0.0",
{%- endif %}
{%- if cookiecutter.use_postgresql %}
{%- if cookiecutter.use_sqlmodel %}
    "sqlmodel>=0.0.22",
{%- else %}
    "sqlalchemy[asyncio]>=2.0.0",
{%- endif %}
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
{%- endif %}
{%- if cookiecutter.use_mongodb %}
    "motor>=3.6.0",
    "beanie>=1.27.0",
{%- endif %}
{%- if cookiecutter.use_sqlite %}
{%- if cookiecutter.use_sqlmodel %}
    "sqlmodel>=0.0.22",
{%- else %}
    "sqlalchemy>=2.0.0",
{%- endif %}
    "alembic>=1.14.0",
{%- endif %}
{%- if cookiecutter.use_jwt %}
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
{%- endif %}
{%- if cookiecutter.use_jwt and not cookiecutter.enable_rate_limiting %}
    "slowapi>=0.1.9",
{%- endif %}
{%- if cookiecutter.enable_oauth %}
    "authlib>=1.3.0",
    "httpx>=0.27.0",
{%- endif %}
{%- if cookiecutter.enable_redis %}
    "redis>=5.2.0",
{%- endif %}
{%- if cookiecutter.enable_caching %}
    "fastapi-cache2>=0.2.2",
{%- endif %}
{%- if cookiecutter.enable_rate_limiting %}
    "slowapi>=0.1.9",
{%- endif %}
{%- if cookiecutter.enable_pagination %}
    "fastapi-pagination>=0.12.31",
{%- endif %}
{%- if cookiecutter.enable_sentry %}
    "sentry-sdk[fastapi]>=2.18.0",
{%- endif %}
{%- if cookiecutter.enable_prometheus %}
    "prometheus-fastapi-instrumentator>=7.0.0",
{%- endif %}
{%- if cookiecutter.enable_admin_panel %}
    "sqladmin>=0.19.0",
{%- endif %}
{%- if (cookiecutter.enable_admin_panel and cookiecutter.admin_require_auth) or cookiecutter.enable_oauth %}
    "itsdangerous>=2.2.0",
{%- endif %}
{%- if cookiecutter.use_celery %}
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
{%- endif %}
{%- if cookiecutter.use_taskiq %}
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "taskiq-dependencies>=0.1.0",
{%- endif %}
{%- if cookiecutter.use_arq %}
    "arq>=0.26.0",
{%- endif %}
{%- if cookiecutter.enable_file_storage %}
    "boto3>=1.35.0",
{%- endif %}
{%- if cookiecutter.use_pydantic_ai %}
{%- if cookiecutter.use_openai %}
    "pydantic-ai>=0.0.39",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "pydantic-ai-slim[anthropic]>=0.0.39",
{%- endif %}
{%- if cookiecutter.use_google %}
    "pydantic-ai-slim[google]>=0.0.39",
{%- endif %}
{%- if cookiecutter.use_openrouter %}
    "pydantic-ai-slim[openrouter]>=0.0.39",
{%- endif %}
{%- endif %}
{%- if cookiecutter.use_langchain %}
    "langchain>=0.3.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_google %}
    "langchain-google-genai>=2.0.0",
{%- endif %}
    "langgraph>=0.2.0",
{%- endif %}
{%- if cookiecutter.use_langgraph %}
    "langchain-core>=0.3.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_google %}
    "langchain-google-genai>=2.0.0",
{%- endif %}
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
{%- endif %}
{%- if cookiecutter.use_crewai %}
    "crewai>=1.0.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_google %}
    "langchain-google-genai>=2.0.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.use_deepagents %}
    "deepagents>=0.1.0",
{%- if cookiecutter.use_openai %}
    "langchain-openai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_anthropic %}
    "langchain-anthropic>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_google %}
    "langchain-google-genai>=2.0.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_rag %}
    # Vector store
{%- if cookiecutter.use_milvus %}
    "pymilvus>=2.4.0",
{%- endif %}
{%- if cookiecutter.use_qdrant %}
    "qdrant-client>=1.12.0",
{%- endif %}
{%- if cookiecutter.use_chromadb %}
    "chromadb>=0.5.0",
{%- endif %}
{%- if cookiecutter.use_pgvector %}
    # pgvector uses existing asyncpg + sqlalchemy (no extra dep needed)
{%- endif %}
    # Text splitting
    "langchain-text-splitters>=0.3.0",
    # BM25 for hybrid search
    "rank-bm25>=0.2.2",
{%- if cookiecutter.use_openai_embeddings %}
    # Uses existing openai dependency
{%- endif %}
{%- if cookiecutter.use_voyage_embeddings %}
    "voyageai>=0.3.0",
{%- endif %}
{%- if cookiecutter.use_gemini_embeddings %}
    "google-genai>=1.0.0",
{%- endif %}
{%- if cookiecutter.use_sentence_transformers %}
    "sentence-transformers>=3.0.0",
{%- endif %}
{%- if cookiecutter.use_cohere_reranker %}
    "cohere>=5.0.0",
{%- endif %}
{%- if cookiecutter.use_cross_encoder_reranker %}
    "sentence-transformers>=3.0.0",
{%- endif %}
{%- if cookiecutter.use_all_pdf_parsers %}
    "pymupdf>=1.25.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "llama-cloud>=1.0.0",
    "liteparse>=0.1.0",
{%- elif cookiecutter.use_llamaparse %}
    "llama-cloud>=1.0.0",
{%- elif cookiecutter.use_liteparse %}
    "liteparse>=0.1.0",
    "python-docx>=1.1.0",
{%- else %}
    "pymupdf>=1.25.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
{%- endif %}
{%- if cookiecutter.enable_google_drive_ingestion %}
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
{%- endif %}
{%- if cookiecutter.enable_s3_ingestion %}
    "boto3>=1.35.0",
{%- endif %}
{%- endif %}
{%- if cookiecutter.enable_langsmith %}
    "langsmith>=0.2.0",
{%- endif %}
{%- if cookiecutter.logfire_httpx or cookiecutter.enable_file_storage %}
    "httpx>=0.27.0",
{%- endif %}
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
{%- if cookiecutter.enable_web_search %}
    "tavily-py>=0.5.0",
{%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
{%- if cookiecutter.enable_precommit %}
    "pre-commit>=4.0.0",
{%- endif %}
]

[project.scripts]
{{ cookiecutter.project_slug }} = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top (needed for conditional Jinja2 imports)
    "B008", # function call in default argument (needed for FastAPI Depends)
    "B905", # zip() without strict= (Python 3.10+ style, not needed)
    "RUF012", # mutable class attribute without ClassVar (used in parser base class)
    "RUF059", # unpacked variable never used (CLI destructuring pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/logfire_setup.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.{{ cookiecutter.generator_name }}]
generator_version = "{{ cookiecutter.generator_version }}"
generated_at = "{{ cookiecutter.generated_at }}"
